[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncmy>=0.2.11",
    "bcrypt>=5.0.0",
    "email-validator>=2.3.0",
    "fastapi>=0.129.0",
    "minio>=7.2.20",
    "pillow>=12.1.1",
    "pydantic-settings>=2.12.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "redis>=7.1.1",
    "sqlalchemy>=2.0.46",
    "torch>=2.10.0",
    "transformers>=5.1.0",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.1",
]
